--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,6 +69,7 @@ a {
 .publicationsSwiper .swiper-button-next,
 .publicationsSwiper .swiper-button-prev {
   color: #063970;
+  font-size: 12px;
 }
 .swiper-pagination-bullet-active {
   background: #063970 !important;
